push basic LWCs to DevHub - 1.0

--- a/portfolio/dev1/main/default/lwc/container/container.html
+++ b/portfolio/dev1/main/default/lwc/container/container.html
@@ -1,5 +1,7 @@
 <template>
     <div class="full-screen-element">
-        <c-hello-world></c-hello-world>
+        <c-header></c-header>
+        <c-body></c-body>
+        <c-footer></c-footer>
     </div>
 </template>
