Add Prospect Datatable - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -1,8 +1,15 @@
 <template>
     <br/>
     Yo it's the Body
-    <lightning-flow
-        flow-api-name='Portfolio_Flow_1'>
-    </lightning-flow>
+    <br/>
+    <c-contact-table></c-contact-table>
+    <br/>
+    <lightning-card variant="base" title="My Component">
+        <div class="slds-p-around_medium">
+            <lightning-flow 
+            flow-api-name='Portfolio_Flow_1'>
+        </lightning-flow>
+        </div>
+    </lightning-card>
     <br/>
 </template>
