Fix Height on Container - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -4,7 +4,7 @@
     <br/>
     <c-contact-table></c-contact-table>
     <br/>
-    <lightning-card variant="base" title="My Component">
+    <lightning-card variant="base">
         <div class="slds-p-around_medium">
             <lightning-flow 
             flow-api-name='Portfolio_Flow_1'>
