--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -6,6 +6,12 @@
     <br/>
     <lightning-card variant="base">
         <div class="slds-p-around_medium">
+            <p>Logged In Check: {message}</p>
+        </div>
+    </lightning-card>
+    <br/>
+    <lightning-card variant="base">
+        <div class="slds-p-around_medium">
             <lightning-flow 
             flow-api-name='Portfolio_Flow_1'>
         </lightning-flow>
