Add Login Link to Header - 1.00

--- a/portfolio/dev1/main/default/lwc/header/header.html
+++ b/portfolio/dev1/main/default/lwc/header/header.html
@@ -1,3 +1,9 @@
 <template>
-    Head
+    <lightning-card>
+        <div class="slds-m-around_medium">
+            <lightning-button-menu>
+                <lightning-menu-item value="MenuItemOne" label="Login" href="/login"></lightning-menu-item>
+            </lightning-button-menu>
+        </div>
+    </lightning-card>    
 </template>
