Contact Table working w/ Guest - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -1,6 +1,6 @@
 <template>
     <br/>
-    Yo it's the Body
+    Yo it's the Body - 1
     <br/>
     <c-contact-table></c-contact-table>
     <br/>
