Login Check Text - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -6,7 +6,7 @@
     <br/>
     <lightning-card variant="base">
         <div class="slds-p-around_medium">
-            <p>Logged In Check: {message}</p>
+            <p>{message}</p>
         </div>
     </lightning-card>
     <br/>
