remove register link - 1.00

--- a/portfolio/dev1/main/default/lwc/header/header.html
+++ b/portfolio/dev1/main/default/lwc/header/header.html
@@ -3,7 +3,7 @@
         <div class="slds-m-around_medium">
             <lightning-button-menu>
                 <lightning-menu-item value="MenuItemOne" label="Login" href="/login"></lightning-menu-item>
-                <lightning-menu-item value="MenuItemOne" label="Register" href="/SelfRegister"></lightning-menu-item>
+                <!--<lightning-menu-item value="MenuItemOne" label="Register" href="/SelfRegister"></lightning-menu-item>-->
             </lightning-button-menu>
         </div>
     </lightning-card>    
