Update contactController to respect user security - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -1,5 +1,11 @@
 <template>
     <br/>
+    <div class="slds-p-around_medium" style="text-align:center">
+        <p style="font-size: 1.5rem; line-spacing: 3vw; font-weight: bold">Sam Kuhn</p>
+        <br/>
+        <p>Software Engineer</p>
+    </div>
+    <br/>
     <c-contact-table></c-contact-table>
     <br/>
     <lightning-card variant="base">
