Add Resume to Portfolio - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -1,24 +1,24 @@
 <template>
-    <br/>
+    <!-- <br/>
     <div class="slds-p-around_medium" style="text-align:center">
         <p style="font-size: 1.5rem; line-spacing: 3vw; font-weight: bold">Sam Kuhn</p>
         <br/>
         <p>Software Engineer</p>
-    </div>
+    </div> -->
     <br/>
-    <c-contact-table></c-contact-table>
-    <br/>
-    <lightning-card variant="base">
-        <div class="slds-p-around_medium">
-            <p>{message}</p>
-        </div>
-    </lightning-card>
-    <br/>
+    <!-- <c-contact-table></c-contact-table> -->
     <lightning-card variant="base">
         <div class="slds-p-around_medium">
             <lightning-flow 
             flow-api-name='Portfolio_Flow_1'>
         </lightning-flow>
+        </div>
+    </lightning-card>
+    <br/>
+    <lightning-card variant="base">
+        <div class="slds-p-around_medium">
+            <!-- <p>{message}</p> -->
+             <c-resume></c-resume>
         </div>
     </lightning-card>
     <br/>
