Speech to Text Works :) - 1.00

--- a/portfolio/dev1/main/default/lwc/body/body.html
+++ b/portfolio/dev1/main/default/lwc/body/body.html
@@ -17,6 +17,12 @@
     <br/>
     <lightning-card variant="base">
         <div class="slds-p-around_medium">
+            <c-speech2-text></c-speech2-text>
+        </div>
+    </lightning-card>
+    <br/>
+    <lightning-card variant="base">
+        <div class="slds-p-around_medium">
             <!-- <p>{message}</p> -->
              <c-resume></c-resume>
         </div>
